--- a/html/contact.html
+++ b/html/contact.html
@@ -9,6 +9,25 @@
 </head>
 <body>
     <h1>Contactformulier</h1>
+
+    <hr>
+    <form>
+        <fieldset>
+            <legend>Contactformulier</legend>
+        <input type="text" placeholder="Uw naam"/>
+        <input type="e-mail" placeholder="Uw E-mailadres"/>
+        <textarea placeholder="Uw boodschap"> Uw boodschap... </textarea>
+        <select>
+            <option value="afdeling">Afdeling</option>
+            <option value="receptie">Receptie</option>
+            <option value="administratie">Administratie</option>
+            <option value="marketing">Marketing</option>
+            <option value="algemeen">Algemeen</option>
+        </select>
+        <button>Verzend</button>
+    </fieldset>
+    </form>
+    <br><hr>
     
 </body>
 </html>
