--- a/index.html
+++ b/index.html
@@ -11,7 +11,21 @@
 <body>
     <h1>Even voorstellen</h1>
     <hr>
-    
-    
+    <header>
+    <nav>
+    <ul>
+        <li><a href="#">A</a></li>
+        <li><a href="#">B</a></li>
+        <li><a href="#">C</a></li>
+        <li><a href="#">D</a></li>
+        <li><a href="#">E</a></li>
+        <li><a href="#">F</a></li>
+    </ul>
+    </nav>
+    </header>
+
+    <footer>
+        <p>footer tekst komt hier</p>
+    </footer>
 </body>
 </html>
