--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <header>
     <nav>
     <ul>
-        <li><a href="#">A</a></li>
-        <li><a href="#">B</a></li>
-        <li><a href="#">C</a></li>
+        <li><a href="#">Mijn CV</a></li>
+        <li><a href="#">Contactformulier</a></li>
+        <li><a href="#">nog bedenken</a></li>
         <li><a href="#">D</a></li>
         <li><a href="#">E</a></li>
         <li><a href="#">F</a></li>
