--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <header>
     <nav>
     <ul>
-        <li><a href="#">Mijn CV</a></li>
-        <li><a href="#">Contactformulier</a></li>
+        <li><a href="html/mijncv.html">Mijn CV</a></li>
+        <li><a href="html/contact.html">Contactformulier</a></li>
         <li><a href="#">nog bedenken</a></li>
         <li><a href="#">D</a></li>
         <li><a href="#">E</a></li>
