--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
     </nav>
     </header>
 
+    <h2>Voor de duidelijkheid</h2>
+    <p>Ik ben niet op zoek naar een nieuwe baan. <br>
+       Deze pagina is oonderdeel van een persoonlijke training voor front-end developper, en doe mijn best om er iets bruikbaars van te maken voor anderen.
+    </p>
+    <p>Tegelijkertijd is het ook een leuke excursie door memory-lane en geeft leuke en minder leuke herbelevingen va de cariere.</p>
+
     <footer>
         <p>footer tekst komt hier</p>
     </footer>
