--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
     </p>
     <p>Tegelijkertijd is het ook een leuke excursie door memory-lane en geeft leuke en minder leuke herbelevingen va de cariere.</p>
 
+    <p>Ik ben Gerard Jonasson, vader van twee kinderen, Sharina en Michel en daarbij de trotse Opa van hun nageslacht, Mace en Luca. <br>
+    zie foto's op de nog te bedenken pagina.</p>
+
     <footer>
         <p>footer tekst komt hier</p>
     </footer>
