--- a/html/mijncv.html
+++ b/html/mijncv.html
@@ -11,6 +11,7 @@
 <body>
     <h1>Mijn CV</h1>
     <hr>
+    <p>HIer komt straks een geformatteerde tabal, als in het CV gemaakt voor Sharina en Michel</p>
     
 </body>
 </html>
