--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <p>Ik ben niet op zoek naar een nieuwe baan. <br>
        Deze pagina is oonderdeel van een persoonlijke training voor front-end developper, en doe mijn best om er iets bruikbaars van te maken voor anderen.
     </p>
-    <p>Tegelijkertijd is het ook een leuke excursie door memory-lane en geeft leuke en minder leuke herbelevingen va de cariere.</p>
+    <p>Tegelijkertijd is het ook een leuke excursie door memory-lane en geeft leuke en minder leuke herbelevingen van mijn cariere, leven.</p>
 
     <p>Ik ben Gerard Jonasson, vader van twee kinderen, Sharina en Michel en daarbij de trotse Opa van hun nageslacht, Mace en Luca. <br>
     zie foto's op de nog te bedenken pagina.</p>
