--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <h2>Voor de duidelijkheid</h2>
     <p>Ik ben niet op zoek naar een nieuwe baan. <br>
-       Deze pagina is oonderdeel van een persoonlijke training voor front-end developper, en doe mijn best om er iets bruikbaars van te maken voor anderen.
+       Deze pagina is onderdeel van een persoonlijke training voor front-end developper, en doe mijn best om er iets bruikbaars van te maken voor anderen.
     </p>
     <p>Tegelijkertijd is het ook een leuke excursie door memory-lane en geeft leuke en minder leuke herbelevingen van mijn cariere, leven.</p>
 
