--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </p>
     <p>Tegelijkertijd is het ook een leuke excursie door memory-lane en geeft leuke en minder leuke herbelevingen van mijn cariere, leven.</p>
 
-    <p>Ik ben Gerard Jonasson, vader van twee kinderen, Sharina en Michel en daarbij de trotse Opa van hun nageslacht, Mace en Luca. <br>
+    <p>Ik ben Gerard Jonasson, echtgenoot van Petra, ouders van twee kinderen, Sharina en Michel en daarbij ook de trotse Opa en Oma van hun/ons nageslacht, Mace en Luca. <br>
     zie foto's op de nog te bedenken pagina.</p>
 
     <footer>
