--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 
     <h2>Voor de duidelijkheid</h2>
     <p>Ik ben niet op zoek naar een nieuwe baan. <br>
-       Deze pagina is onderdeel van een persoonlijke training voor front-end developper, gewoon omdat ik dat leuk vind, en doe mijn best om er iets bruikbaars van te maken voor anderen.
+       Deze pagina is onderdeel van een persoonlijke training met als doel "front-end developper", gewoon omdat ik dat leuk vind, en doe mijn best om er iets bruikbaars van te maken voor anderen.
     </p>
-    <p>Tegelijkertijd is het ook een leuke excursie door memory-lane en geeft leuke en minder leuke herbelevingen van mijn cariere, leven.</p>
+    <p>Tegelijkertijd is het ook een leuke excursie door memory-lane en geeft leuke en minder leuke herbelevingen van mijn cariere en leven.</p>
 
     <p>Ik ben Gerard Jonasson, echtgenoot van Petra, ouders van twee kinderen, Sharina en Michel en daarbij ook de trotse Opa en Oma van hun/ons nageslacht, Mace en Luca. <br>
     zie foto's op de nog te bedenken pagina.</p>
