--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
     <p>Ik ben Gerard Jonasson, echtgenoot van Petra, ouders van twee kinderen, Sharina en Michel en daarbij ook de trotse Opa en Oma van hun/ons nageslacht, Mace en Luca. <br>
     zie foto's op de nog te bedenken pagina.</p>
 
+    <fieldset>
+        <legend>Hier wat beel bij het verhaal</legend>
+        
+    </fieldset>
+
     <footer>
         <p>footer tekst komt hier</p>
     </footer>
