--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
     <p>Tegelijkertijd is het ook een leuke excursie door memory-lane en geeft leuke en minder leuke herbelevingen van mijn cariere en leven.</p>
 
     <p>Ik ben Gerard Jonasson, echtgenoot van Petra, ouders van twee kinderen, Sharina en Michel en daarbij ook de trotse Opa en Oma van hun/ons nageslacht, Mace en Luca. <br>
-    zie foto's op de nog te bedenken pagina.</p>
+    zie "misschien teveel" foto's op de nog te bedenken pagina.</p>
 
     <fieldset>
         <legend>Hier wat beel bij het verhaal</legend>
-        
+
     </fieldset>
 
     <footer>
