--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </p>
     <p>Tegelijkertijd is het ook een leuke excursie door memory-lane en geeft leuke en minder leuke herbelevingen van mijn cariere en leven.</p>
 
-    <p>Ik ben Gerard Jonasson, echtgenoot van Petra, ouders van twee kinderen, Sharina en Michel en daarbij ook de trotse Opa en Oma van hun/ons nageslacht, Mace en Luca. <br>
+    <p>Ik ben Gerard Jonasson, echtgenoot van Petra, ouders van twee kinderen, Sharina en Michel en daarbij ook nog de trotse Opa en Oma van hun/ons nageslacht, Mace en Luca. <br>
     zie "misschien teveel" foto's op de nog te bedenken pagina.</p>
 
     <fieldset>
