--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <p>Ik ben niet op zoek naar een nieuwe baan. <br>
        Deze pagina is onderdeel van een persoonlijke training met als doel "front-end developper", gewoon omdat ik dat leuk vind, en doe mijn best om er iets bruikbaars van te maken voor anderen.
     </p>
-    <p>Tegelijkertijd is het ook een leuke excursie door memory-lane en geeft leuke en minder leuke herbelevingen van mijn cariere en leven.</p>
+    <p>Tegelijkertijd is het ook een leuke excursie door memory-lane en geeft bij het maken van deze swebsite, leuke en minder leuke herbelevingen van mijn cariere en leven.</p>
 
     <p>Ik ben Gerard Jonasson, echtgenoot van Petra, ouders van twee kinderen, Sharina en Michel en daarbij ook nog de trotse Opa en Oma van hun/ons nageslacht, Mace en Luca. <br>
     zie "misschien teveel" foto's op de nog te bedenken pagina.</p>
