--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </fieldset>
 
     <footer>
-        <p>footer tekst komt hier</p>
+        <p>footer tekst komt hier met copyright</p>
     </footer>
 </body>
 </html>
