--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
        Deze website is onderdeel van een persoonlijke training met als doel "WEB-Design_front-end development" onder de knie te krijgen. Gewoon omdat ik dat leuk vind. 
        Ik doe mijn best om hier iets bruikbaars van te maken voor anderen.
     </p>
-    <p>Tegelijkertijd is het ook een leuke excursie door memory-lane en geeft bij het maken van deze swebsite, leuke en minder leuke herbelevingen van mijn cariere 
+    <p>Tegelijkertijd is het ook een leuke excursie door memory-lane en geeft bij het maken van deze website, leuke en minder leuke herbelevingen van mijn cariere 
         en leven.</p>
 
     <p>Ik ben Gerard Jonasson, sinds 29-06-1990 echtgenoot van mijn Petra en samen zijn wij de gelukkige ouders van onze twee kinderen, Sharina en Michel en daarbij ook nog de 
