--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
         zie "misschien ook wel wat teveel????" foto's op de nog te bedenken pagina.</p>
 
     <fieldset>
-        <legend>Hier wat beel bij het verhaal</legend>
+        <legend>Hier wat beeld bij het verhaal</legend>
 
     </fieldset>
 
     <footer>
-        <p>footer tekst komt hier met copyright</p>
+        <p>footer tekst komt hier iets met copyright ed.</p>
     </footer>
 </body>
 </html>
