--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
 
     <h2>Voor de duidelijkheid</h2>
-    <p>Ik ben niet op zoek naar een nieuwe baan. <br>
+    <p>Ik ben <ul>niet</ul> op zoek naar een nieuwe baan. <br>
        Deze website is onderdeel van een persoonlijke training met als doel "WEB-Design_front-end development" onder de knie te krijgen. Gewoon omdat ik dat leuk vind. 
        Ik doe mijn best om hier iets bruikbaars van te maken voor anderen.
     </p>
