--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <h2>Voor de duidelijkheid</h2>
     <p>Ik ben <ul>niet</ul> op zoek naar een nieuwe baan. <br>
-       Deze website is onderdeel van een persoonlijke training met als doel "WEB-Design_front-end development" onder de knie te krijgen. Gewoon omdat ik dat leuk vind. 
+       Deze website is onderdeel van een persoonlijke training met als doel "WEB-Design_front-end development" onder de knie te krijgen. Gewoon omdat ik het leuk vind. 
        Ik doe mijn best om hier iets bruikbaars van te maken voor anderen.
     </p>
     <p>Tegelijkertijd is het ook een leuke excursie door memory-lane en geeft bij het maken van deze website, leuke en minder leuke herbelevingen van mijn cariere 
