--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <p>Tegelijkertijd is het ook een leuke excursie door memory-lane en geeft bij het maken van deze website, leuke en minder leuke herbelevingen van mijn cariere 
         en leven.</p>
 
-    <p>Ik ben Gerard Jonasson, sinds 29-06-1990 echtgenoot van mijn Petra en samen zijn wij de gelukkige ouders van onze twee kinderen, Sharina Berendse-Jonasson
+    <p>Ik ben Gerard Jonasson, sinds 29 juni 1990 echtgenoot van mijn Petra en samen zijn wij de gelukkige ouders van onze twee kinderen, Sharina Berendse-Jonasson
         en Michel Jonasson en daarbij ook nog de trotse Grootouders van onze Kleinkinderen, Mace Zane jonasson (van Michel en Joyce Jonasson) 
         en Luca Dean Berendse (uit Chris en Sharina Berendse). <br>zie "misschien ook wel wat teveel????" foto's op de nog te bedenken pagina.</p>
 
