--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 
     <fieldset>
         <legend>Hier wat beeld bij het verhaal</legend>
+        <p>Tabel met foto's - of flex met foto's</p>
 
     </fieldset>
 
