--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <p>Hallo. Ik ben Gerard Jonasson, sinds 29 juni 1990 echtgenoot van mijn Petra en samen zijn wij de gelukkige ouders van onze twee kinderen, Sharina Berendse-Jonasson
         en Michel Jonasson en daarbij ook nog de trotse Grootouders van onze Kleinkinderen, Mace Zane jonasson (van Michel en Joyce Jonasson) 
-        en Luca Dean Berendse (uit Chris en Sharina Berendse). <br>(zie "misschien ook wel wat teveel????" foto's op de nog te bedenken pagina.)</p>
+        en Luca Dean Berendse (uit Chris en Sharina Berendse). <br><br>(zie "misschien ook wel wat teveel????" foto's op de nog te bedenken pagina.)</p>
 
     <fieldset>
         <legend>Hier wat beeld bij het verhaal</legend>
