--- a/html/contact.html
+++ b/html/contact.html
@@ -11,6 +11,16 @@
     <h1>Contactformulier</h1>
 
     <hr>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="html/mijncv.html">Mijn CV</a></li>
+                <li><a href="#">nog bedenken</a></li>
+                <li><a href="html/contact.html">Contactformulier</a></li>
+            </ul>
+        </nav>
+    </header>
     <form>
         <fieldset>
             <legend>Contactformulier</legend>
