--- a/html/mijncv.html
+++ b/html/mijncv.html
@@ -11,6 +11,16 @@
 <body>
     <h1>Mijn CV</h1>
     <hr>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="html/mijncv.html">Mijn CV</a></li>
+                <li><a href="#">nog bedenken</a></li>
+                <li><a href="html/contact.html">Contactformulier</a></li>
+            </ul>
+        </nav>
+    </header>
     <p>HIer komt straks een geformatteerde tabal, als in het CV gemaakt voor Sharina en Michel</p>
     
 </body>
