--- a/html/mijncv.html
+++ b/html/mijncv.html
@@ -15,9 +15,9 @@
         <nav>
             <ul>
                 <li><a href="../index.html">Home</a></li>
-                <li><a href="html/mijncv.html">Mijn CV</a></li>
+                <li><a href="../html/mijncv.html">Mijn CV</a></li>
                 <li><a href="#">nog bedenken</a></li>
-                <li><a href="html/contact.html">Contactformulier</a></li>
+                <li><a href="../html/contact.html">Contactformulier</a></li>
             </ul>
         </nav>
     </header>
