--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
 
+    <link rel="icon" href="img/PG.png" type="image/png">
+
     <title>Eerst mijzelf even voorstellen</title>
 </head>
 <body>
