--- a/html/mijncv.html
+++ b/html/mijncv.html
@@ -16,13 +16,37 @@
         <nav>
             <ul>
                 <li><a href="../index.html">Home</a></li>
-                <li><a href="../html/mijncv.html">Mijn CV</a></li>
                 <li><a href="#">nog bedenken</a></li>
                 <li><a href="../html/contact.html">Contactformulier</a></li>
             </ul>
         </nav>
     </header>
-    <p>HIer komt straks een geformatteerde tabal, als in het CV gemaakt voor Sharina en Michel</p>
+    <p>Hier komt straks een geformatteerde tabal, als in het CV gemaakt voor Sharina en Michel</p>
+
+    <fieldset>
+        <legend>CV G.A. Jonasson </legend>
+        <table>
+            <tbody>
+                <tr id="persGegevens">
+                    <td rowspan="8"><img src="https://via.placeholder.com/200x200" alt="placeholder"></td>
+                    <td><b>Naam:</b></td>
+                    <td>Gerard Anton Jonasson</td> 
+                </tr>
+                <tr>
+                    <td>Adres:</td>
+                    <td>Kortedijk 39</td>
+                </tr>
+                <tr>
+                    <td>Postcode en woonplaats:</td>
+                    <td>3134HA Vlaardingen</td>
+                </tr>
+            </tbody>
+
+
+
+    <footer>
+        <p>Hier komt de footer tekst</p>
+    </footer>
     
 </body>
 </html>
