--- a/html/mijncv.html
+++ b/html/mijncv.html
@@ -42,7 +42,7 @@
                 </tr>
             </tbody>
             
-
+        </table>
 
     <footer>
         <p>Hier komt de footer tekst</p>
