--- a/html/mijncv.html
+++ b/html/mijncv.html
@@ -9,7 +9,7 @@
 
     <title>CV Gerard Jonasson</title>
 </head>
-<body>
+<body>   
     <h1>Mijn CV</h1>
     <hr>
     <header>
@@ -39,6 +39,14 @@
                 <tr>
                     <td>Postcode en woonplaats:</td>
                     <td>3134HA Vlaardingen</td>
+                </tr>
+                <tr>
+                    <td>Telefoonnummer:</td>
+                    <td>+31(0)6-20012578</td>
+                </tr>
+                <tr>
+                    <td>Geboortedatum:</td>
+                    <td>01 november 1958</td>
                 </tr>
             </tbody>
             
