--- a/html/mijncv.html
+++ b/html/mijncv.html
@@ -51,7 +51,7 @@
             </tbody>
             
         </table>
-
+    </fieldset>    
     <footer>
         <p>Hier komt de footer tekst</p>
     </footer>
