--- a/html/mijncv.html
+++ b/html/mijncv.html
@@ -24,7 +24,7 @@
     
 
     <fieldset id="persGegevens">
-        <legend><h2>Curiclium Vitea van G.A. Jonasson</h2> </legend>
+        <legend><h2>Curriculum Vitea van G.A. Jonasson</h2> </legend>
         <table>
             <tbody>
                 <tr>
