--- a/html/mijncv.html
+++ b/html/mijncv.html
@@ -45,7 +45,7 @@
                     <td>+31(0) 6-20012578</td>
                 </tr>
                 <tr>
-                    <td><b>Geboortedatum:</b></td>
+                    <td><b>Geboortedatum = plaats:</b></td>
                     <td>01 november 1958 te Rotterdam</td>
                 </tr>
                 <tr>
