--- a/html/mijncv.html
+++ b/html/mijncv.html
@@ -28,7 +28,7 @@
         <table>
             <tbody>
                 <tr>
-                    <td width="200" rowspan="8"><img src="../img/FotoGerard.jpg" alt="FotoGerard" width="170px" height="220px"></td>
+                    <td width="200" rowspan="8"><img id="fotogerard" src="../img/FotoGerard.jpg" alt="FotoGerard" width="170px" height="220px"></td>
                     <td width="300"><b>Naam:</b></td>
                     <td width="300">Gerard Anton Jonasson</td> 
                 </tr>
