--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
     <p>Tegelijkertijd is het ook een leuke excursie door memory-lane en geeft bij het maken van deze website, leuke en minder leuke herbelevingen van mijn cariere 
         en leven.</p>
     <h3>Mijzelf voorstellen....</h3>    
-    <p>Hallo. Ik ben Gerard Jonasson, sinds 29 juni 1990 echtgenoot van mijn lieve en zorgzame vrouw <b>Petra</b>, en samen zijn wij de gelukkige ouders van onze twee kinderen, Sharina Berendse-Jonasson
-        en Michel Jonasson en daarbij ook nog de trotse Grootouders van onze Kleinkinderen, Mace Zane jonasson (van Michel en Joyce Jonasson) 
-        en Luca Dean Berendse (uit Chris en Sharina Berendse). <br><br>(zie "misschien ook wel wat teveel????" foto's op de nog te bedenken pagina.)</p>
+    <p>Hallo. Ik ben Gerard Jonasson, sinds 29 juni 1990 echtgenoot van mijn lieve en zorgzame vrouw <b>Petra</b>.<br/>
+        Samen zijn wij de gelukkige ouders van onze twee kinderen, Sharina Berendse-Jonasson en Michel Jonasson. <br/>
+        Daar bovenop ook nog de trotse Grootouders van onze Kleinkinderen, Mace Zane jonasson (van Michel en Joyce Jonasson) 
+        en Luca Dean Berendse (van Chris en Sharina Berendse). <br><br>(zie "misschien ook wel wat teveel????" foto's op de nog te bedenken pagina.)</p>
 
     <fieldset>
         <legend>Hier wat beeld bij het verhaal</legend>
