--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <p>Hallo.<br/>
         Ik ben Gerard Jonasson, sinds 29 juni 1990 echtgenoot van mijn lieve en zorgzame vrouw <b>Petra Jonasson-Mellaart</b>.<br/>
         Samen zijn wij de gelukkige ouders van onze twee kinderen, Sharina Berendse-Jonasson en Michel Jonasson. <br/>
-        Daar bovenop ook nog de trotse Grootouders van onze Kleinkinderen, Mace Zane jonasson (van Michel en Joyce Jonasson) 
+        Daar bovenop ook nog de <u>trotse Grootouders</u>van onze Kleinkinderen, Mace Zane jonasson (van Michel en Joyce Jonasson) 
         en Luca Dean Berendse (van Chris en Sharina Berendse). <br><br>(zie "misschien ook wel wat teveel????" foto's op de nog te bedenken pagina.)</p>
 
     <fieldset>
