--- a/html/contact.html
+++ b/html/contact.html
@@ -22,7 +22,7 @@
         </nav>
     </header>
     <form>
-        <fieldset>
+        <fieldset id="contactform">
             <legend>Contactformulier</legend>
         <input type="text" placeholder="Uw naam"/>
         <input type="e-mail" placeholder="Uw E-mailadres"/>
