--- a/html/contact.html
+++ b/html/contact.html
@@ -22,8 +22,9 @@
         </nav>
     </header>
     <form>
-        <fieldset id="contactform">
+        <fieldset>
             <legend>Contactformulier</legend>
+        <div id="contactform">    
         <input type="text" placeholder="Uw naam"/>
         <input type="e-mail" placeholder="Uw E-mailadres"/>
         <textarea placeholder="Uw boodschap"> Uw boodschap... </textarea>
@@ -35,6 +36,7 @@
             <option value="algemeen">Algemeen</option>
         </select>
         <button>Verzend</button>
+        </div>
     </fieldset>
     </form>
     <br><hr>
