--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav>
             <ul>
                 <li><a href="html/mijncv.html">Mijn CV</a></li>
-                <li><a href="#">nog bedenken</a></li>
+                <li><a href="html/bedenken.html">nog bedenken</a></li>
                 <li><a href="html/contact.html">Contactformulier</a></li>
             </ul>
         </nav>
@@ -25,29 +25,49 @@
 
     <h2>Voor de duidelijkheid</h2>
     <p>Ik ben <u>niet</u> op zoek naar een nieuwe baan. <br>
-       Deze website is onderdeel van een persoonlijke training met als doel "WEB-Design_front-end development" onder de knie te krijgen.<br/>
-       Gewoon omdat ik het leuk vind. <br/>
+       Deze website is onderdeel van een persoonlijke training met als doel "WEB-Design_front-end development" onder de knie te krijgen. Gewoon omdat ik het leuk vind. 
        Ik doe mijn best om hier iets bruikbaars van te maken voor anderen.
     </p>
     <p>Tegelijkertijd is het ook een leuke excursie door memory-lane en geeft bij het maken van deze website, leuke en minder leuke herbelevingen van mijn cariere 
         en leven.</p>
     <h3>Mijzelf voorstellen....</h3>    
-    <p>Hallo.<br/>
-        Ik ben Gerard Jonasson, sinds 29 juni 1990 echtgenoot van mijn lieve en zorgzame vrouw <b>Petra Jonasson-Mellaart</b>.<br/>
-        Samen zijn wij de gelukkige ouders van onze twee kinderen, Sharina Berendse-Jonasson en Michel Jonasson. <br/>
-        Daar bovenop ook nog de <u>trotse Grootouders</u>van onze Kleinkinderen, Mace Zane jonasson (van Michel en Joyce Jonasson) 
-        en Luca Dean Berendse (van Chris en Sharina Berendse). 
-        <br><br>
-        (zie "misschien ook wel wat teveel????" foto's op de nog te bedenken pagina.)</p>
+    <p>Hallo. Ik ben Gerard Jonasson, sinds 29 juni 1990 echtgenoot van mijn lieve en zorgzame vrouw <b>Petra</b> en samen zijn wij de gelukkige ouders van onze twee kinderen, Sharina Berendse-Jonasson
+        en Michel Jonasson en daarbij ook nog de trotse Grootouders van onze Kleinkinderen, Mace Zane jonasson (van Michel en Joyce Jonasson) 
+        en Luca Dean Berendse (van Chris en Sharina Berendse). <br>(zie "misschien ook wel wat teveel????" foto's op de nog te bedenken pagina.)</p>
 
-    <fieldset>
-        <legend>Hier wat beeld bij het verhaal</legend>
-        <p>Tabel met foto's - of flex met foto's</p>
+        <fieldset id="vpfieldset">
+            <legend><h2>Hier wat beeld bij het verhaal</h2></legend>
+        <table id="stamboom">
+            <tbody>
+                <tr>
+                    <td></td>
+                    <td width="220" id="pgfoto"><img src="img/peetgeer.jpg" alt="" width="200" height="180"></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td><img src="img/chrisSharina.jpg" alt="" width="200" height="180"></td>
+                    <td></td>
+                    <td><img src="img/michelJoyce.jpg" alt="" width="170" height="180"></td>
+                </tr>
+                <tr>
+                    <td><img src="img/luca.jpeg" alt="" width="200" height="200"></td>
+                    <td></td>
+                    <td><img src="img/mace2019.jpg" alt="" width="170" height="200"></td>
+                    
+                </tr>
 
-    </fieldset>
-
-    <footer>
-        <p>footer tekst komt hier iets met copyright ed.</p>
-    </footer>
+            </tbody>
+        </table>
+        </fieldset>
+        <br>
+        <footer>
+            <table>
+                <tr><td></td></tr>
+                <tr>
+                    <td id="foot">2022 | &copy; Gerard Jonasson </td>
+                </tr>
+            </table>
+            
+        </footer>
 </body>
 </html>
