--- a/html/mijncv.html
+++ b/html/mijncv.html
@@ -43,6 +43,7 @@
                 <tr>
                     <td><b>Telefoonnummer:</b></td>
                     <td>+31(0) 6-20012578</td>
+                    <td>thuis 010-48414864</td>
                 </tr>
                 <tr>
                     <td><b>Geboortedatum - plaats:</b></td>
